--- a/src/index.css
+++ b/src/index.css
@@ -124,3 +124,13 @@ input[type="number"] {
 .digit-input {
   @apply border border-gray w-full rounded-md px-2 py-5 text-center text-2xl;
 }
+
+/* Selector */
+
+.selector-container {
+  @apply bg-lightSecondary text-sm flex items-center hover:bg-primary hover:text-white cursor-pointer font-normal rounded-full px-6 py-3;
+}
+
+.selector-icon {
+  @apply inline-block mr-2;
+}
