--- a/src/index.css
+++ b/src/index.css
@@ -155,3 +155,7 @@ input[type="number"] {
 .h3-header {
   @apply font-semibold text-2xl;
 }
+
+.account-content-holder {
+  @apply flex max-w-7xl mx-auto h-[80vh] mt-20;
+}
