service history and report

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,10 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  accent-color: #ce1449;
+}
+
 /* remove outline from all inputs  */
 textarea:focus,
 input:focus {
