--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,10 @@ input[type="number"] {
   @apply bg-none border border-primary rounded-full text-primary px-5 md:px-8 py-2 md:py-3 text-sm md:text-base;
 }
 
+.btn-dark-outline-sm {
+  @apply bg-none border border-gray rounded-full text-gray px-3 md:px-3 py-1 md:py-2 text-xs md:text-xs;
+}
+
 .btn-hollow {
   @apply bg-white;
 }
