--- a/src/index.css
+++ b/src/index.css
@@ -165,11 +165,11 @@ input[type="number"] {
 
 /* account */
 .account-card {
-  @apply rounded-2xl shadow-xl p-5 py-10 border border-faintGray;
+  @apply flex flex-row md:flex-col  gap-1 md:items-start items-center md:rounded-2xl md:shadow-xl p-0 md:p-5 md:py-10 md:border md:border-faintGray;
 }
 
 .account-card > h3 {
-  @apply font-semibold text-xl mb-2;
+  @apply font-semibold text-base md:text-xl mb-0 md:mb-2;
 }
 
 .account-card > p {
@@ -185,7 +185,7 @@ input[type="number"] {
 }
 
 .account-content-holder {
-  @apply max-w-6xl  mx-auto min-h-screen mt-20;
+  @apply w-full md:max-w-6xl  mx-auto min-h-screen mt-20;
 }
 
 /* tabs */
