--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,10 @@ input[type="number"] {
   @apply w-full border border-mute rounded-md px-5 py-3;
 }
 
+.form-input-rounded {
+  @apply w-full border border-mute rounded-full px-5 py-3;
+}
+
 .form-input-dark {
   @apply w-full border text-sm border-gray rounded-md px-5 py-3;
 }
@@ -156,11 +160,11 @@ input[type="number"] {
 /* Selector */
 
 .selector-container {
-  @apply md:bg-lightSecondary text-sm md:flex items-center  cursor-pointer font-normal rounded-full md:px-6 md:py-3;
+  @apply md:bg-lightSecondary justify-center text-sm flex flex-col md:flex-row items-center  cursor-pointer font-normal rounded-full px-0 py-0 md:px-6 md:py-3;
 }
 
 .selector-icon {
-  @apply block md:inline-block;
+  @apply block;
 }
 
 /* account */
