provider and checkout mobiles screens

--- a/src/index.css
+++ b/src/index.css
@@ -181,7 +181,7 @@ input[type="number"] {
 }
 
 .general-card {
-  @apply shadow-xl rounded-2xl p-10;
+  @apply shadow-xl rounded-2xl p-5 md:p-10;
 }
 
 .h3-header {
