--- a/src/index.css
+++ b/src/index.css
@@ -145,8 +145,6 @@ input[type="number"] {
   @apply border border-gray w-full rounded-md px-2 py-5 text-center text-2xl;
 }
 
-
-
 /* account */
 .account-card {
   @apply flex flex-row md:flex-col  gap-1 md:items-start items-center md:rounded-2xl md:shadow-xl p-0 md:p-5 md:py-10 md:border md:border-faintGray;
@@ -191,4 +189,31 @@ input[type="radio"] {
 }
 .message-pill {
   @apply rounded-full bg-faintGray text-xs text-gray py-1 px-4 inline-block;
+}
+
+/* Skeleton loaders */
+.skeleton {
+  opacity: 0.7;
+  animation: skeleton-loading 1s linear infinite alternate;
+}
+
+.skeleton-text {
+  width: 100%;
+  height: 1rem;
+  margin-bottom: 0.5rem;
+  border-radius: 0.125rem;
+}
+
+.skeleton-text:last-child {
+  margin-bottom: 0;
+  width: 80%;
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: hsl(0, 0%, 67%);
+  }
+  100% {
+    background-color: hsl(200, 20%, 95%);
+  }
 }
