Booking info card additions, and selector

--- a/src/app/Home/index.css
+++ b/src/app/Home/index.css
@@ -4,6 +4,10 @@
   @apply md:bg-lightSecondary  flex-nowrap justify-center text-sm flex flex-col md:flex-row items-center  cursor-pointer font-normal rounded-full px-2 py-0 md:px-6 md:py-3;
 }
 
+.selector-container-selected {
+  @apply md:bg-primary text-white  flex-nowrap justify-center text-sm flex flex-col md:flex-row items-center  cursor-pointer font-normal rounded-full px-2 py-0 md:px-6 md:py-3;
+}
+
 .selector-icon {
   @apply block text-primary;
 }
