booking request processing and status modal

--- a/src/index.css
+++ b/src/index.css
@@ -230,3 +230,8 @@ input[type="radio"] {
   opacity: 1;
   background-color: #ce1449;
 }
+
+/* undelrine with hover effect */
+.under {
+  @apply underline underline-offset-4 cursor-pointer hover:text-primary;
+}
