--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,24 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+/* CUSTOM SCROLLBAR */
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #99989821;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #969696;
+  border-radius: 10px;
+}
+
 /* Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
